# cruster

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix  knope.toml  opencode.jsonc  package.json  pnpm-lock.yaml  ralph-auto.jsonc  ralph-auto.sh  rulesync.jsonc
.changeset/: README.md  activity-journal-unified-codegen.md  carry-tracing.md  clone-clients.md  custom-migration-tracking-table.md  entity-id-view.md  fix-cargo-lock-versioning.md  fix-distributed-trace-hierarchy.md  fix-journal-check-and-single-param-key.md  fix-self-send-loop.md  fix-shutdown-hang.md  fix-shutdown-network-calls.md  fix-shutdown-ordering.md  opentelemetry-instrumentation.md  reduce-instrument-span-noise.md  remove-manual-migration-tracking.md  remove-memory-fakes.md  remove-otel-init.md  revert-trace-context-fix.md  trace-propagation-tests.md  upgrade-sqlx-0.8.md  upgrade-sqlx-storage-builders.md  workflow-client-join.md
.claude/: CLAUDE.md
.claude/rules/: build-commands.md  project-overview.md  rules-maintenance.md  rust-development.md  testing.md
.github/workflows/: ci.yml  publish.yml
.opencode/memories/: build-commands.md  project-overview.md  rules-maintenance.md  rust-development.md  testing.md
.rulesync/rules/: build-commands.md  changesets.md  commit-checklist.md  project-overview.md  root.md  rules-maintenance.md  rust-development.md  testing.md
crates/cruster/: Cargo.toml
crates/cruster-macros/: Cargo.toml
crates/cruster-macros/src/: lib.rs
crates/cruster/benches/: shard_assignment.rs
crates/cruster/migrations/: 0017_create_stateless_counter_values_table.sql  0018_create_counter_values_table.sql  0019_create_kv_store_entries_table.sql  0020_create_workflow_test_executions_table.sql  0021_create_activity_test_logs_table.sql  0022_create_cross_entity_tables.sql  0023_create_timer_test_tables.sql  0024_create_trait_test_tables.sql  0025_create_sql_activity_test_state_table.sql  0026_create_activity_group_test_orders_table.sql
crates/cruster/src/: config.rs  cron.rs  durable.rs  entity.rs  entity_client.rs  entity_manager.rs  entity_reaper.rs  entity_resource.rs  envelope.rs  hash.rs  lib.rs  macro_tests.rs  metrics.rs  otel.rs  shard_assigner.rs  sharding.rs  sharding_impl.rs  single_runner.rs  singleton.rs  state_guard.rs  testing.rs
crates/cruster/src/storage/: etcd_runner.rs  mod.rs  sql_message.rs  sql_migrations.rs  sql_workflow.rs  sql_workflow_engine.rs  sql_workflow_journal.rs  sql_workflow_runtime.rs
crates/cruster/src/transport/: grpc.rs
crates/cruster/tests/: macro_integration.rs  multi_runner.rs  sharding_integration.rs  sql_integration.rs
crates/cruster/tests/ui/: missing_trait_with.rs  missing_trait_with.stderr  persisted_method_requires_serde.rs  persisted_method_requires_serde.stderr  persisted_state_requires_serde.rs  persisted_state_requires_serde.stderr
examples/chess-cluster/: Cargo.toml
examples/chess-cluster/src/: lib.rs
examples/chess-cluster/src/chess/: engine.rs
examples/chess-cluster/src/entities/: chess_game.rs  leaderboard.rs  matchmaking.rs  mod.rs  player_session.rs
examples/chess-cluster/src/entities/traits/: auditable.rs  mod.rs
examples/chess-cluster/src/types/: game.rs
examples/chess-cluster/tests/: entity_interactions.rs  game_lifecycle.rs
examples/cluster-tests/: Cargo.toml  Dockerfile  Dockerfile.ci  docker-compose.ci.yml  docker-compose.yml
examples/cluster-tests/src/: api.rs  main.rs
examples/cluster-tests/src/entities/: activity_group_test.rs  activity_test.rs  counter.rs  cross_entity.rs  kv_store.rs  mod.rs  singleton_test.rs  sql_activity_test.rs  stateless_counter.rs  timer_test.rs  trait_test.rs  workflow_test.rs
examples/cluster-tests/tests/: e2e.sh  test_activity_groups.sh  test_db_persistence.sh  test_stateless_counter.sh
examples/cluster-tests/tests/lib/: helpers.sh
nix/: checks.nix  shells.nix
specs/: activity-journal.md  carry-tracing.md  rendezvous-hashing.md  shard-assigment.md  workflows-api.md
