[package]
name = "cruster-macros"
version = "0.0.13"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Arnaldi <michael.arnaldi@effectful.co>"]
repository = "https://github.com/mikearnaldi/cruster"
homepage = "https://github.com/mikearnaldi/cruster"
keywords = ["distributed", "actor", "cluster", "workflow", "durable"]
categories = ["asynchronous", "network-programming"]
description = "Procedural macros for the cruster distributed entity framework"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
