[package]
name = "cruster"
version = "0.0.13"
edition = "2021"
license = "MIT"
authors = ["Michael Arnaldi <michael.arnaldi@effectful.co>"]
description = "A Rust framework for building distributed, stateful entity systems with durable workflows"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7" }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"

# gRPC
tonic = "0.12"
prost = "0.13"

# Errors
thiserror = "1"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1"

# Metrics
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"

# Tracing
tracing = "0.1"

# Macros
cruster-macros = { path = "../cruster-macros", version = "0.0.13" }

# SQL storage (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "chrono"], optional = true }

# etcd storage (optional)
etcd-client = { version = "0.14", optional = true }

# Consistent hashing (optional)
hashring = { version = "0.3", optional = true }

# Parallel computation (optional)
rayon = { version = "1.10", optional = true }

[features]
default = []
sql = ["dep:sqlx"]
etcd = ["dep:etcd-client"]
consistent-hash = ["dep:hashring"]
parallel = ["dep:rayon"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1"

[[bench]]
name = "shard_assignment"
harness = false
